--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div>
                             <input type="text" class="form-control" placeholder="To-Do Item" id="newToDoValue">
                             <div class="input-group-append">
-                                <button class="btn btn-success" type="submit" onclick="addToDo()">Add</button>
+                                <button class="btn btn-success" type="button" onclick="addToDo()">Add</button>
                             </div>
                         </div>
                     </form>
@@ -63,7 +63,7 @@
                         <div class="input-group mt-3 mb-3">
                             <input type="text" class="form-control" placeholder="Category Name" id="newCategoryValue">
                             <div class="input-group-append">
-                                <button class="btn btn-success" type="submit" onclick="newCategory()">Add</button>
+                                <button class="btn btn-success" type="button" onclick="newCategory()">Add</button>
                             </div>
                         </div>
                         <div class="input-group mt-3 mb-3">
@@ -76,7 +76,7 @@
                                   </select>
                               </div>
                             <div class="input-group-append">
-                                <button class="btn btn-danger" type="submit" onclick="removeCategory()">Remove</button>
+                                <button class="btn btn-danger" type="button" onclick="removeCategory()">Remove</button>
                             </div>
                         </div>
                         </form>
